--- a/package.json
+++ b/package.json
@@ -39,14 +39,15 @@
   },
   "homepage": "https://github.com/david30907d/pyproject_template#readme",
   "dependencies": {
-    "commitizen": "^4.0.3",
+    "commitizen": "^4.1.2",
     "cz-conventional-changelog": "^3.1.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
+    "lodash": "^4.17.19",
     "minimist": "^1.2.5"
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.3.5",
+    "@commitlint/cli": "^9.1.2",
     "@commitlint/config-conventional": "^8.3.4"
   },
   "config": {
